# pyastq

./: .gitignore  Cargo.toml  LICENSE.md  README.md  past.example.py  past.example.toml  pyastq.example.py  pyastq.example.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/check/: .pyastq-cache.json  example.py  pyastq.toml
examples/replace/: example.py  expected-unsafe.py  expected.py  pyastq.toml
src/: cache.rs  cli.rs  files.rs  main.rs  query_parser.rs  report.rs  rewrite.rs  rules.rs  search.rs  search_tests.rs
src/cli/: tests.rs
src/find/: mod.rs
src/query/: lexer.rs  matcher.rs  mod.rs  model.rs  parser.rs  resolver.rs
src/search/: tests.rs
