[package]
name = "pyastq"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "pyastq"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
rayon = "1.10"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tree-sitter = "0.26.9"
tree-sitter-python = "0.25.0"
